feat: avance en creación de sql injection para pruebas de per testing